--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
       21: { question: "Zu welcher ‘Gewalt’ gehört die Bundesregierung?", answer: ["Exekutive"], stickers: "Sticker: 3 goldene Sterne" },
       22: { question: "💅🎤🎶 Welches Event beschreiben diese Emojis?", answer: ["Twenty4tim Konzert", "Twenty4tim", "Konzert", "Twenty4Tim Konzert", "Twenty4tim konzert"], stickers: "Sticker: Sterne in Kerzenform" },
       23: { question: "Ich leih’ ein Tretboot, bitte fahr’ mit mir - Aus welchem Song stammt diese Zeile?", answer: ["Rimini"], stickers: "Sticker: 2 Blaue + 1 grüner Stern" },
-      24: { question: "“Ach hört doch auf😭” Welches Geschenk steht in Verbindung mit diesem Satz?", answer: ["Schloss", "Liebesschloss", "graviertes Schloss"], stickers: "Sticker: Schloss + 1 goldener Stern" },
+      24: { question: "“Ach hört doch auf😭” Welches Geschenk steht in Verbindung mit diesem Satz?", answer: ["Schloss", "Liebesschloss", "graviertes Schloss"], stickers: "Sticker: 2 Blumensträuße + 1 goldenes Blatt" },
     };
 
     // Überprüfe das Datum
